上传Excel解析后数据

--- a/emsystem/public/index.html
+++ b/emsystem/public/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <script src="https://cdn.staticfile.org/FileSaver.js/2014-11-29/FileSaver.min.js"></script>
+    <script src="https://cdn.staticfile.org/xlsx/0.18.2/xlsx.full.min.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body style="margin: 0px;">
